Add category and item time rankings
